--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -28,6 +28,18 @@ body {
   margin: 0 auto;
 }
 
+.innerContent{
+    width: 1160px;
+    margin: 0 auto;
+}
+
+.innerP{
+
+    .topContainer{
+        height: fit-content;
+    }
+}
+
 .ml-0{
     margin-left: 0 !important;
 }
@@ -140,10 +152,12 @@ body {
     width: 100%;
     height: 64px;
     border: 1px solid #03a6a0;
+    background: #fff;
     font-size: 1.25rem;
     line-height: 140%;
     font-weight: 500;
     color: #03a6a0;
+    border-radius: 8px;
 
     &:hover{
         background: #03a6a0;
@@ -152,12 +166,35 @@ body {
     }
 }
 
+.planshRow{
+    display: none;
+}
+
+.mt-8{
+    margin-top: 80px;
+}
+
+.mt-6{
+    margin-top: 60px;
+}
+
 
 
 
 @media screen and (max-width: 1440px) and (min-width: 960px) {
+    .planshRow{
+        display: block;
+    }
+
+    .descRow{
+        display: none;
+    }
   .common{
     width: 920px !important;
+  }
+
+  .innerContent{
+    width: 780px !important;
   }
 
   .travelB{
