--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -220,7 +220,7 @@ body {
 
 
 
-@media screen and (max-width: 1440px) and (min-width: 960px) {
+@media screen and (max-width: 1560px) and (min-width: 960px) {
     .planshRow{
         display: block;
     }
@@ -287,10 +287,10 @@ body {
 @media screen and (max-width: 960px) {
 
     .common{
-        width: 320px !important;
+        width: calc(100% - 24px) !important;
     }
     .maxW{
-        max-width: 320px !important;
+        max-width: calc(100% - 24px) !important;
     }
 
     .commonT{
